--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Visual Studio временные файлы и папки.vs/
+*.vscode
+.vs/
+
+# Файлы пользователя Visual Studio
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Папки сборки и байт-код
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+build/
+[Bb]in/
+[Oo]bj/
+
 # Prerequisites
 *.d
 
@@ -14,8 +33,10 @@
 # Linker files
 *.ilk
 
-# Debugger Files
+# Файлы отладочных данных
 *.pdb
+*.idb
+*.ipdb
 
 # Compiled Dynamic libraries
 *.so
@@ -39,3 +60,9 @@
 
 # debug information files
 *.dwo
+
+# Логи и временные файлы
+*.log
+*.tmp
+*.tmp_proj
+*.cachefile
